--- a/pages/image.html
+++ b/pages/image.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8">
+    <title>CSS: Layout 2</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/color.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen">
+    <link rel="stylesheet" type ="text/css" href="css/960_16_col.css" />
+  </head> 
+  
+  <body>
+    <header>
+      <img src="../images/header/all.jpg">
+    </header>
+    <div id= "title"> IMAGES </div>
+  </body>
