--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <header> 
+    <img src="../images/header/all.jpg">
+    
+    </header>
+    <nav>
+      <a href= "images.html">Image Gallery</a>
+    </nav>
     <section class="page-header">
       <h1 class="project-name">Youtube-news-site</h1>
       <h2 class="project-tagline"></h2>
