--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link href="pages/images.html"> 
   </head>
   <body>
   <header>
     <img src ="images/header/all.jpg">
   </header>
-  <
+  <nav>
+    <a href="page/images.html">Image Gallery</a>
+  </nav>
 
   
   </body>
