--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src ="images/header/all.jpg">
   </header>
   <nav>
-    <a href="page/images.html">Image Gallery</a>
+    <a href="page/image.html">Image Gallery</a>
   </nav>
 
   
