--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src ="images/header/all.jpg">
   </header>
   
-    <a href="page/image.html">Image Gallery</a>
+    <a href="image.html">Image Gallery</a>
   
 
   
