--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Youtube-news-site by Brianawynn</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/960_12_col.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   </head>
   <body>
@@ -12,8 +12,15 @@
     <img src ="images/header/all.jpg">
   </header>
   
+  <div class="container_12 clearfix">  
+  <div id="nav" class="grid_12"> 
     <a href="image.html">Image Gallery</a>
-  
+    <a href="beauty.html"> Beauty</a>
+    <a href="gaming.html"> Gaming</a>
+    <a href="video.html"> YouTube Video</a>
+    <a href="Youtube.html">YouTube</a>
+  </div>
+  </div>
 
   
   </body>
