--- a/image.html
+++ b/image.html
@@ -19,4 +19,22 @@
   <img src="images/imagegallery/thumbnails/mp1.jpg">
   <img src="images/imagegallery/thumbnails/zs1.jpg">
   <img src= "images/imagegallery/thumbnails/tb1.jpg">
-</body>
+  <img src= "images/imagegallery/thumbnails/tb2.jpg">
+  <img src= "images/imagegallery/thumbnails/tb3.jpg">
+  <img src= "images/imagegallery/thumbnails/mp2.jpg">
+  <img src= "images/imagegallery/thumbnails/zs2.jpg">
+  <img src= "images/imagegallery/thumbnails/zs3.jpg">
+  
+  <h2 id="gaming">Gaming</h2>
+  <img src= "images/imagegallery/thumbnails/pp1.jpg">
+  <img src= "images/imagegallery/thumbnails/pp2.jpg">
+  <img src= "images/imagegallery/thumbnails/pp3.jpg">
+  
+  <h3 id="vlog">Vlog Adventures</h3>
+  <img src= "images/imagegallery/thumbnails/lc1.jpg">
+  <img src= "images/imagegallery/thumbnails/lc2.jpg">
+  <img src= "images/imagegallery/thumbnails/lc3.jpg">
+  <img src= "images/imagegallery/thumbnails/lc4.jpg">
+  <img src= "images/imagegallery/thumbnails/lc5.jpg">
+  <img src= "images/imagegallery/thumbnails/lc6.jpg">
+  </body>
