--- a/image.html
+++ b/image.html
@@ -2,12 +2,11 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>CSS: Layout 2</title>
+    <title>YouTube| Images</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/color.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen">
-    <link rel="stylesheet" type ="text/css" href="css/960_16_col.css" />
   </head>
 
 <body>
@@ -15,7 +14,10 @@
     <img src="images/header/all.jpg">
   </heaader>
   
-  <h2 id="beauty">Beauty</h2>
+  <div class="title">Image Gallery</div>
+  
+  <h2 class="beauty">Beauty</h2>
+  
   <img src="images/imagegallery/thumbnails/mp1.jpg">
   <img src="images/imagegallery/thumbnails/zs1.jpg">
   <img src= "images/imagegallery/thumbnails/tb1.jpg">
@@ -25,16 +27,28 @@
   <img src= "images/imagegallery/thumbnails/zs2.jpg">
   <img src= "images/imagegallery/thumbnails/zs3.jpg">
   
-  <h2 id="gaming">Gaming</h2>
+  <h2 class="gaming">Gaming</h2>
+  
   <img src= "images/imagegallery/thumbnails/pp1.jpg">
   <img src= "images/imagegallery/thumbnails/pp2.jpg">
   <img src= "images/imagegallery/thumbnails/pp3.jpg">
   
-  <h3 id="vlog">Vlog Adventures</h3>
+  <h3 class="vlog">Vlog Adventures</h3>
+  
   <img src= "images/imagegallery/thumbnails/lc1.jpg">
   <img src= "images/imagegallery/thumbnails/lc2.jpg">
   <img src= "images/imagegallery/thumbnails/lc3.jpg">
   <img src= "images/imagegallery/thumbnails/lc4.jpg">
   <img src= "images/imagegallery/thumbnails/lc5.jpg">
   <img src= "images/imagegallery/thumbnails/lc6.jpg">
+  
+  <hr/>
+  <footer>
+    <ul id="footer">
+      <li>Copyrighted </li>
+      <li>Terms of Service</li>
+      <li>Work With Us</li>
+      <li>Contact Us</li>
+    </ul>
+  </footer>
   </body>
