--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <div class="container_12 clearfix">  
   <div id="nav" class="grid_12"> 
-    <a href="image.html" taarget= "_blank">Image Gallery</a>
+    <a href="image.html" target= "_blank">Image Gallery</a>
     <a href="beauty.html" target = "_blank"> Beauty</a>
     <a href="gaming.html" target = "_blank"> Gaming</a>
     <a href="video.html" target ="_blank"> YouTube Video</a>
