--- a/image.html
+++ b/image.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/color.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/image.css" media="screen">
   </head>
 
 <body>
