--- a/image.html
+++ b/image.html
@@ -21,11 +21,20 @@
   <img src="images/imagegallery/thumbnails/mp1.jpg">
   <img src="images/imagegallery/thumbnails/zs1.jpg">
   <img src= "images/imagegallery/thumbnails/tb1.jpg">
-  <img src= "images/imagegallery/thumbnails/tb2.jpg">
-  <img src= "images/imagegallery/thumbnails/tb3.jpg">
-  <img src= "images/imagegallery/thumbnails/mp2.jpg">
-  <img src= "images/imagegallery/thumbnails/zs2.jpg">
+   <img src= "images/imagegallery/thumbnails/zs2.jpg">
   <img src= "images/imagegallery/thumbnails/zs3.jpg">
+   <img src= "images/imagegallery/thumbnails/mp2.jpg">
+   
+<div id=" links">
+  <ul>
+    <li><a href="beauty.html"> Beauty </a></li>
+    <li><a href="gaming.html"> Gaming </a></li>
+    <li><a href= "vlog.html"> Vlogs</a></li>
+    <li><a href="videos.html"> YouTube Video</a></li>
+    <li><a href="youtube.html"> YouTube</a></li>
+  </ul>
+</div>    
+    
   
   <h2 class="gaming">Gaming</h2>
   
