--- a/image.html
+++ b/image.html
@@ -10,22 +10,15 @@
   </head>
 
 <body>
-  <heaader>
+  <header>
     <img src="images/header/all.jpg">
-  </heaader>
+  </header>
   
   <div class="title">Image Gallery</div>
   
   <h2 class="beauty">Beauty</h2>
   
-  <img src="images/imagegallery/thumbnails/mp1.jpg">
-  <img src="images/imagegallery/thumbnails/zs1.jpg">
-  <img src= "images/imagegallery/thumbnails/tb1.jpg">
-   <img src= "images/imagegallery/thumbnails/zs2.jpg">
-  <img src= "images/imagegallery/thumbnails/zs3.jpg">
-   <img src= "images/imagegallery/thumbnails/mp2.jpg">
-   
-<div id=" links">
+   <div id=" links">
   <ul>
     <li><a href="beauty.html"> Beauty </a></li>
     <li><a href="gaming.html"> Gaming </a></li>
@@ -33,9 +26,17 @@
     <li><a href="videos.html"> YouTube Video</a></li>
     <li><a href="youtube.html"> YouTube</a></li>
   </ul>
-</div>    
-    
+</div> 
+
+  <img src="images/imagegallery/thumbnails/mp1.jpg">
+  <img src="images/imagegallery/thumbnails/zs1.jpg">
+  <img src= "images/imagegallery/thumbnails/tb1.jpg">
+   <img src= "images/imagegallery/thumbnails/zs2.jpg">
+  <img src= "images/imagegallery/thumbnails/zs3.jpg">
+   <img src= "images/imagegallery/thumbnails/mp2.jpg">
+   
   
+   
   <h2 class="gaming">Gaming</h2>
   
   <img src= "images/imagegallery/thumbnails/pp1.jpg">
