--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Youtube-news-site by Brianawynn</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/960_12_col.css" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/home.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   </head>
-  <body>
-  <header>
-    <img src ="images/header/all.jpg">
-  </header>
   
-  <div class="container_12 clearfix">  
+  <header> </header>
+  
+  <body>
+  
+  
   <div id="nav" class="grid_12"> 
     <a href="image.html" target= "_blank">Image Gallery</a>
     <a href="beauty.html" target = "_blank"> Beauty</a>
@@ -20,6 +20,25 @@
     <a href="video.html" target ="_blank"> YouTube Video</a>
     <a href="Youtube.html" target = "_blank">YouTube</a>
   </div>
+  
+  <div class ="image">
+    <img src="images/head/mph1.jpg">
+  </div>
+  
+  <div class ="article">
+    <h2>PewDiePie: how the YouTube king clocked up 40m fans and 10bn views</h2>
+    <p>Felix Kjellberg stars on US chat shows, is fighting off TV offers and has written his first book.
+    But his online life remains top priority</p>
+  </div>
+  
+  <div class ="article">
+    <h2>Create YouTube-Worthy Videos With a Few Simple Tools</h2>
+    <p>To be the next big YouTube star, you need the right tools. But before you break the bank on expensive video equipment, 
+    start with these simple devices. You can always upgrade later when you become famous.</p>
+  </div>
+  
+  <div class ="image">
+  <img src="images/head/lc1.jpg">
   </div>
 
   
