--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Youtube-news-site by Brianawynn</title>
+    <title>Youtube|News</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/home.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -17,7 +17,6 @@
     <a href="image.html" target= "_blank">Image Gallery</a>
     <a href="beauty.html" target = "_blank"> Beauty</a>
     <a href="gaming.html" target = "_blank"> Gaming</a>
-    <a href="video.html" target ="_blank"> YouTube Video</a>
     <a href="Youtube.html" target = "_blank">YouTube</a>
   </div>
   
