--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   </head>
   
-  <header> </header>
+  <header>
+    <img src="images/header/all.jpg">
+     </header>
   
   <body>
   
@@ -21,7 +23,7 @@
   </div>
   
   <div class ="image">
-    <img src="images/head/mph1.jpg">
+    <img src="images/head/mp1.jpg">
   </div>
   
   <div class ="article">
