--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
   
 
-  <div id="nav" class="grid_12"> 
-    <a href="image.html" target= "_blank">Image Gallery</a>
-    <a href="beauty.html" target = "_blank"> Beauty</a>
-    <a href="gaming.html" target = "_blank"> Gaming</a>
-    <a href="Youtube.html" target = "_blank">YouTube</a>
+  <div class="nav"> 
+    <a class="image" href="image.html" target= "_blank">Image Gallery</a>
+    <a class="beauty" href="beauty.html" target = "_blank"> Beauty</a>
+    <a class="gaming" href="gaming.html" target = "_blank"> Gaming</a>
+    <a class ="youtube" href="Youtube.html" target = "_blank">YouTube</a>
   </div>
   
   <div class ="image">
