--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <img src="images/head/mp1.jpg">
   </div>
   
-  <div class ="article">
+  <div id ="a1" class ="article">
     <h2>PewDiePie: how the YouTube king clocked up 40m fans and 10bn views</h2>
     <p>Felix Kjellberg stars on US chat shows, is fighting off TV offers and has written his first book.
     But his online life remains top priority</p>
   </div>
   
-  <div class ="article">
+  <div id ="a2" class ="article">
     <h2>Create YouTube-Worthy Videos With a Few Simple Tools</h2>
     <p>To be the next big YouTube star, you need the right tools. But before you break the bank on expensive video equipment, 
     start with these simple devices. You can always upgrade later when you become famous.</p>
