--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   
   <div class ="image">
-    <img src="images/head/zs1.jpg">
+    <img src="images/head/mp1.jpg">
   </div>
   
   <div id ="a1" class ="article">
