--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
   
   <div class ="image">
-    <img src="images/head/mp1.jpg">
+  <a href="image.html">  <img src="images/head/mp1.jpg"></a>
   </div>
   
   <div id ="a2" class ="article">
