--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <body>
   
 
-    <div id ="a1" class ="article">
+  <a href="pp1.html">  <div id ="a1" class ="article">
     <h2>PewDiePie: how the YouTube king clocked up 40m fans and 10bn views</h2>
     <p>Felix Kjellberg stars on US chat shows, is fighting off TV offers and has written his first book.
     But his online life remains top priority</p>
   </div>
+  </a>
   
   <div class ="image">
   <a href="image.html">  <img src="images/head/mp1.jpg"></a>
