--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      </header>
   
   <body>
-  
+  <div id="wrapper">
   <div id ="a1" class ="article">
   <a href="pp1.html">  
     <h2>PewDiePie: how the YouTube king clocked up 40m fans and 10bn views</h2>
@@ -23,7 +23,7 @@
   </div>
 
   
-  <div class ="image">
+  <div id="imag1" class ="image">
   <a href="image.html">  <img src="images/head/mp1.jpg"></a>
   </div>
   
@@ -37,7 +37,7 @@
   
   
   
-  <div class ="image">
+  <div id="imag2" class ="image">
     <a href="vlog.html">
     <img src="images/head/lc1.jpg">
     </a>
@@ -45,6 +45,6 @@
   
 
 
-  
+  </div>
   </body>
 </html>
