--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
     <img src="images/head/lc1.jpg">
     </a>
   </div>
-  
-
-
   </div>
+    <hr/>
+  <footer>
+    <ul id="footer">
+      <li>Copyrighted </li>
+      <li>Terms of Service</li>
+      <li>Work With Us</li>
+      <li>Contact Us</li>
+    </ul>
+  </footer>
   </body>
 </html>
