--- a/image.html
+++ b/image.html
@@ -12,6 +12,7 @@
     <img src="images/header/all.jpg">
   </header>
   
+  <div id="wrapper">
   <div class="title">Image Gallery</div>
   
   <h2 class="beauty">Beauty</h2>
@@ -49,7 +50,7 @@
   <img src= "images/imagegallery/thumbnails/lc4.jpg">
   <img src= "images/imagegallery/thumbnails/lc5.jpg">
   <img src= "images/imagegallery/thumbnails/lc6.jpg">
-  
+  </div>
   <hr/>
   <footer>
     <ul id="footer">
