--- a/image.html
+++ b/image.html
@@ -51,5 +51,14 @@
   <img src= "images/imagegallery/thumbnails/lc5.jpg">
   <img src= "images/imagegallery/thumbnails/lc6.jpg">
   </div>
+   <hr/>
+  <footer>
+    <ul id="footer">
+      <li>Copyrighted </li>
+      <li>Terms of Service</li>
+      <li>Work With Us</li>
+      <li>Contact Us</li>
+    </ul>
+  </footer>
  
   </body>
