--- a/image.html
+++ b/image.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <img src="images/header/all.jpg">
+  <a href="index.html">  <img src="images/header/all.jpg"></a>
   </header>
   
   <div id="wrapper">
@@ -21,7 +21,6 @@
     <li><a href="beauty.html"> Beauty </a></li>
     <li><a href="gaming.html"> Gaming </a></li>
     <li><a href= "vlog.html"> Vlogs</a></li>
-    <li><a href="videos.html"> YouTube Video</a></li>
     <li><a href="youtube.html"> YouTube</a></li>
   </ul>
 </div> 
