--- a/image.html
+++ b/image.html
@@ -16,12 +16,12 @@
   <div class="title">Image Gallery</div>
   
       <div id=" links">
-  <ul>
-    <li><a href="beauty.html"> Beauty </a></li>
-    <li><a href="gaming.html"> Gaming </a></li>
-    <li><a href= "vlog.html"> Vlogs</a></li>
-    <li><a href="youtube.html"> YouTube</a></li>
-  </ul>
+  <p>
+    <a href="beauty.html"> Beauty </a>
+    <a href="gaming.html"> Gaming </a>
+    <a href= "vlog.html"> Vlogs</a>
+    <a href="youtube.html"> YouTube</a>
+  </p>
 </div> 
   
   <h2 class="beauty">Beauty</h2>
