--- a/pp1.html
+++ b/pp1.html
@@ -9,6 +9,9 @@
   </head>
 
 <body>
+  <header>
+    <a href="index.html"><img src="images/header/all.jpg"></a>
+  </header>
         
    <div id=" links">
   <p>
@@ -20,7 +23,7 @@
   </p>
 </div>
 
-  div class="article">
+  <div class="article">
       <h2 class="headline">PewDiePie: how the YouTube king clocked up 40m fans and 10bn views</h2></h2>
       <h4 class="byline">Stuart Dredge Thursday 22 October 2015</h4>
       
