--- a/pp1.html
+++ b/pp1.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Youtube-news-site by Brianawynn</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="article1.css" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="article.css" >
   </head>
 
 <body>
