--- a/pp1.html
+++ b/pp1.html
@@ -8,6 +8,7 @@
   </head>
 
 <body>
+  <div id="wrapper">
   <header>
     <a href="index.html"><img src="images/header/all.jpg"></a>
   </header>
@@ -85,6 +86,7 @@
     Live, mocked the phenomenon. Colbert, by contrast, treated Kjellberg and 
     his viewers with respect.</p>
     
+    </div>
     </div>
   </body>
   <hr/>
