--- a/pp1.html
+++ b/pp1.html
@@ -92,12 +92,16 @@
   <hr/>
     <footer>
        <div class="related">
+         <div class="r1">
   <h4>Related Articles</h4>
   <h6>How Michelle Phan Built A $500 Million Company</h6>
   <img src="images/imagegallery/thumbnails/mp1.jpg">
+  </div>
+  <div class="r2">
   <h6>Vlogger Tanya Burr opens up about suffering with anxiety
   ‘I was sick every single morning'</h6>
   <img src="images/imagegallery/thumbnails/tb1.jpg">
+  </div>
   </div>
     <ul id="footer">
       <li>Copyrighted </li>
