--- a/vlog.html
+++ b/vlog.html
@@ -104,5 +104,12 @@
     </div>
   </body>
   <hr/>
-  <footer></footer>
+  <footer>
+      <ul id="footer">
+      <li>Copyrighted </li>
+      <li>Terms of Service</li>
+      <li>Work With Us</li>
+      <li>Contact Us</li>
+    </ul>
+  </footer>
   </html>
